<package format="3">
  <name>wheelbot_sim</name>
  <version>0.1.0</version>
  <description>Simulated differential-drive wheel bot for ROS 2.</description>
  <maintainer email="anders.roxenhag@emoco.com">Anders Roxenhag</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
